media query added to prevent white space

--- a/public/styles.css
+++ b/public/styles.css
@@ -145,3 +145,9 @@ a.btn-anchor {
   color: salmon;
   text-decoration: none;
 }
+
+@media screen and (min-width: 480px) {
+  .container {
+    padding: 0 0;
+  }
+}
